# tales_of_relika

./: CMakeLists.txt  README.md  compile_assets.bat  compile_assets.py  conanfile.txt  conanfile_OLD.py  generate_vs_debug.bat  generate_vs_release.bat
misc_items/shaders/voxel/: 2-iso_field_gen.cl  2-iso_field_gen.comp  3-unify_fields.cl
python/: compile_assets.py  line_counter.py
resources/data/: block_types.ini
resources/shaders/compute/: compile.bat  create_vbo.cl  create_vbo.comp  create_vbo.spv
resources/shaders/compute/Samplers/: sampler.inc
resources/shaders/compute/heightmapEngine/: heightmap_gen.cl
resources/shaders/compute/libUSL/: Buffers.inc  Types.inc  USL.inc  compat.inc
resources/shaders/compute/libnoise/: libnoise_core.inc  libnoise_model.inc  libnoise_module.inc  libnoise_objects.inc
resources/shaders/compute/test/: test_include.inc  test_opencl_spirv.cl  test_output.cl  (+1 more)
src/: CMakeLists.txt  exe_main.cpp  game_exe_main.cpp
src/Compute/: CMakeLists.txt
src/Compute/include/: ComputeBuffer_VK.h  ComputeController_VK.h  ComputeEngine.h  ComputeInterface.h  ComputeInterface_private.h  ComputeProgram_VK.h  ForwardDeclarations.h  IComputeBuffer.h  IComputeBuffer_private.h  IComputeController.h  IComputeController_private.h  IComputeProgram.h  IComputeProgram_private.h  InterfaceIncludes.h  InterfaceIncludes_private.h  PlatformStructures.h  PlatformStructures_private.h  dynamic_compute.h  std_includes.h  stdafx.h  vulkan_utils.h
src/Compute/include/OpenCL/: ComputeBuffer_OCL.h  ComputeController.h  ComputeController_OCL.h  ComputeEngine.h  ComputeEngine_OCL.h  ComputeProgram_OCL.h  OCL_forwardDeclarations.h  ProgramBuilder.h
src/Compute/include/OpenCL/CL_SDK/: CMakeLists.txt  cl_dx9_media_sharing.h  cl_ext.h  cl_layer.h  cl_main.cpp  cl_va_api_media_sharing_intel.h  opencl.hpp
src/Compute/include/OpenCL/CL_SDK/Utils/: Context.h  Context.hpp  Device.hpp  Error.h  Error.hpp  Event.h  Event.hpp  File.h  File.hpp  InteropContext.hpp  Platform.hpp  Utils.h  Utils.hpp
src/Compute/include/Vulkan/: ComputeBuffer_VK.h  ComputeEngine.h  ComputeProgram_VK.h
src/Compute/include/Vulkan/nvpro_core/nvvk/: gl_vk_vertex_buffer.h
src/Compute/include/nvpro_core/nvvk/: gl_vk_vertex_buffer.h
src/Compute/src/: ComputeBuffer_VK.cpp  ComputeController_VK.cpp  ComputeEngine.cpp  ComputeInterface.cpp  ComputeInterface_private.cpp  ComputeProgram_VK.cpp  IComputeBuffer.cpp  IComputeController.cpp  IComputeProgram.cpp  vulkan_utils.cpp
src/Compute/src/OpenCL/: ComputeBuffer_OCL.cpp  ComputeController.cpp  ComputeController_OCL.cpp  ComputeEngine.cpp  ComputeEngine_OCL.cpp  ComputeProgram_OCL.cpp  ProgramBuilder.cpp
src/Compute/src/Vulkan/: ComputeBuffer_VK.cpp  ComputeController_VK.cpp  ComputeEngine.cpp  ComputeEngine_VK.cpp  ComputeProgram_VK.cpp  vulkan_utils.cpp
src/Engine/: CMakeLists.txt
src/Engine/include/: BoxCollider.h  Camera.h  CapsuleCollider.h  Collider.h  Component.h  Cube_Material.h  Cubemap.h  Engine.h  Framebuffer.h  GPUSort.h  Graphics.h  Input.h  Light.h  Light_Material.h  Logger.h  LuaEngine.h  Material.h  Mesh.h  MeshCollider.h  MeshRenderer.h  Model.h  Physics.h  Raycast.h  Renderer.h  Resources.h  Scene.h  Shader.h  SphereCollider.h  Texture.h  Transform.h  Utilities.h  WorldObject.h  game_engine.h  glad.h  input_events.h  khrplatform.h  opengl.h  window.h
src/Engine/src/: BoxCollider.cpp  Camera.cpp  CapsuleCollider.cpp  Collider.cpp  Component.cpp  Cube_Material.cpp  Cubemap.cpp  Engine.cpp  Framebuffer.cpp  GPUSort.cpp  Graphics.cpp  Input.cpp  Light.cpp  Light_Material.cpp  Logger.cpp  LuaEngine.cpp  Material.cpp  Mesh.cpp  MeshCollider.cpp  MeshRenderer.cpp  Model.cpp  Physics.cpp  Raycast.cpp  Resources.cpp  Scene.cpp  Shader.cpp  SphereCollider.cpp  Texture.cpp  Transform.cpp  Utilities.cpp  WorldObject.cpp  glad.c  window.cpp
src/Game/: CMakeLists.txt
src/Game/include/: Client_Server_Interface.h  Editor_Camera_Control.h  Game.h  GameClient.h  Game_Resources.h  LocalPlayerCharacter.h  Material_Types.h  NetPlayerCharacter.h  NetPlayerManager.h  Opaque_Chunk_Material.h  Standard_Material.h  Stitch_VBO.h  TerrainChunk.h  Test_OpenCL_Scene.h  Test_Scene.h  VoxelWorld_Scene.h  Voxel_Test_Scene.h  WorldGenController.h
src/Game/src/: Client_Server_Interface.cpp  Editor_Camera_Control.cpp  Game.cpp  GameClient.cpp  LocalPlayerCharacter.cpp  Material_Types.cpp  NetPlayerCharacter.cpp  NetPlayerManager.cpp  Opaque_Chunk_Material.cpp  Standard_Material.cpp  Stitch_VBO.cpp  TerrainChunk.cpp  Test_OpenCL_Scene.cpp  Test_Scene.cpp  VoxelWorld_Scene.cpp  Voxel_Test_Scene.cpp  WorldGenController.cpp
src/LuaCpp/: CMakeLists.txt  Lua.hpp
src/LuaCpp/Registry/: LuaLibrary.cpp
src/LuaCpp_OLD/: CMakeLists.txt  LuaContext.cpp
src/Server/: CMakeLists.txt
src/Server/include/: CommandExecuter.h  HashHelper.h  IUser.h  Linux_conio.h  Match.h  MatchManager.h  Player.h  Server_Main.h  World.h  WorldController.h  stdafx.h
src/Server/include/Network/: AsyncServer.h  BufferUtils.h  Data.h  NetClient.h  OpCodes.h  PlayerAuthenticator.h  SocketUser.h  TCP_Connection.h  TCP_Server.h  UDP_Server.h  udp_connection.h
src/Server/src/: CommandExecuter.cpp  IUser.cpp  Linux_conio.cpp  Match.cpp  MatchManager.cpp  Player.cpp  Server_Main.cpp  World.cpp  WorldController.cpp
src/Server/src/Network/: AsyncServer.cpp  AsyncServer_SocketUser.cpp  NetClient.cpp  PlayerAuthenticator.cpp  TCP_Connection.cpp  TCP_Server.cpp  UDP_Server.cpp  udp_connection.cpp
src/Server_Exe/: CMakeLists.txt  server_exe_main.cpp
src/VoxelEngine/: CMakeLists.txt
src/VoxelEngine/include/: ChunkProcessor.h  ChunkProcessor_private.h  ForwardDeclarations.h  HeightmapGenerator.h  IVoxelBuilder.h  IVoxelBuilder_private.h  SmoothVoxelBuilder.h  TerrainModifications.h  VoxelComputeProgram.h  marchingcubes_arrays.h  shared_structures.h  std_includes.h  stdafx.h
src/VoxelEngine/src/: ChunkProcessor.cpp  ChunkProcessor_private.cpp  HeightmapGenerator.cpp  IVoxelBuilder.cpp  SmoothVoxelBuilder.cpp  TerrainModifications.cpp  VoxelComputeProgram.cpp  marchingcubes_arrays.cpp
(+88 files in other folders)
